# vela

./: .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PRODUCT.md  README.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  frontier_artifact.md  proof_demo_issue.md  schema_issue.md
.github/workflows/: bbb-extension-living-repo.yml  bbb-living-repo.yml  ci.yml  doi-validation.yml  pages.yml  release.yml  will-alzheimer-living-repo.yml
assets/brand/: LICENSE
benchmarks/: entity-gold-100.json  gold-50.json  gold-alzheimers.json  gold-neuro-100.json  leaderboard.json  link-gold-50.json  sample-gold.json  validate-benchmark-fixtures.py
benchmarks/bbb-scout-bench-001/: candidate.json  expected.json
benchmarks/gold/entities/: bbb-entity-50.json  example-paper-folder.json
benchmarks/gold/findings/: bbb-core-50.json  example-paper-folder.json
benchmarks/gold/links/: bbb-link-50.json  example-paper-folder.json
benchmarks/results/: alzheimers-therapeutics.json  bbb-alzheimer.json  bbb-extension.json  will-alzheimer-landscape.json
benchmarks/suites/: bbb-core.json  example-paper-folder.json
bindings/python/: README.md
bindings/python/vela/: __init__.py
clients/python/: vela_verify.py
clients/typescript/: vela_reducer.mjs  vela_reducer.ts
crates/vela-cli/: Cargo.toml
crates/vela-cli/src/: main.rs
crates/vela-hub/: .dockerignore  Cargo.toml  Dockerfile  fly.hub-2.toml  fly.toml
crates/vela-hub/src/: db.rs  main.rs
crates/vela-protocol/: Cargo.toml
crates/vela-protocol/src/: agent_bench.rs  aggregate.rs  benchmark.rs  bridge.rs  bundle.rs  calibration.rs  canonical.rs  causal_graph.rs  causal_reasoning.rs  cli.rs  cli_style.rs  confidence.rs  conformance.rs  corpus.rs  counterfactual.rs  crossref.rs  diff.rs  entity_resolve.rs  events.rs  export.rs  extract.rs  federation.rs  fetch.rs  ingest.rs  jats.rs  lib.rs  link.rs  lint.rs  llm.rs  main.rs  normalize.rs  observer.rs  packet.rs  permission.rs  project.rs  propagate.rs  proposals.rs  queue.rs  reducer.rs  registry.rs  (+14 more)
crates/vela-protocol/tests/: cascade_replay_at_scale.rs  cli_release_contract.rs  cross_impl_reducer_fixtures.rs
crates/vela-protocol/tests/fixtures/: cascade-fixture-00.json  cascade-fixture-01.json  cascade-fixture-02.json  cascade-fixture-03.json  cascade-fixture-04.json
crates/vela-scientist/: Cargo.toml
crates/vela-scientist/src/: agent.rs  code_analyst.rs  datasets.rs  experiments.rs  extract.rs  legacy_compile.rs  legacy_corpus.rs  legacy_extract.rs  legacy_ingest.rs  legacy_link.rs  legacy_llm.rs  lib.rs  llm_cli.rs  notebook.rs  notes.rs  reviewer.rs  scout.rs  tensions.rs
demo/: README.md  condition-loss-transcript.md  run-bbb-proof.sh  v0-state-proof-demo.sh
deploy/workbench/: .dockerignore  Dockerfile  fly.toml
docs/: AGENT_INBOX.md  ARCHITECTURE.md  BENCHMARKS.md  BRAND.md  CLI_JSON.md  CORE_DOCTRINE.md  DESIGN.md  EVAL_CARD.md  FIRST_FRONTIER.md  FRONTIER_REVIEW.md  HUB.md  LEARN.md  MATH.md  MCP.md  MCP_SETUP.md  PHASE_A_CONTENT_EXPANSION.md  PRIMITIVES.md  PRIVATE_EVALUATOR_NOTE.md  PRODUCT.md  PROOF.md  PROTOCOL.md  PUBLISHING.md  PYTHON.md  READING.md  REGISTRY.md  SCHEMA_MISMATCH_AGENT_OUTPUTS.md  SIM_USER_BBB.md  STATE_TRANSITION_SPEC.md  THEORY.md  TIERS.md  TRACE_FORMAT.md  V0_DOGFOOD_REPORT.md  V0_RELEASE_NOTES.md  VELABENCH.md  WORKBENCH.md
essays/: science-needs-state.md
examples/atlas-integration/: README.md  consume_vela.py
examples/paper-folder/: README.md  reviewed-findings.csv  run.sh
examples/paper-folder/bad-input/: malformed-findings.csv  thin-note.md  unsupported.xyz
examples/paper-folder/expected/: README.md  compile-report.json  frontier-quality.md  frontier.json  mcp-transcript.json  quality-table.json
examples/paper-folder/papers/: findings.csv  mini-bbb.jats.xml  picalm-note.md
examples/python-agent/: extract_and_propose.py
frontiers/: README.md  alzheimers-therapeutics.json  bbb-alzheimer.json  bbb-extension.json  will-alzheimer-landscape.json
projects/bbb-flagship/.vela/: config.toml  peers.json  proof-state.json
projects/bbb-flagship/raw/: 10-1016_j-neuron-2004-07-017.txt  10-1016_j-neuron-2013-10-061.txt  10-1038_nm890.txt  10-1038_nn-4025.txt  10-1038_s41467-018-04529-6.txt  10-1038_s41593-022-01240-0.txt  10-1056_nejmoa2308719.txt  10-1126_scitranslmed-3002230.txt  10-1126_scitranslmed-3009835.txt  10-1161_01-str-0000143452-85382-d1.txt
schema/: finding-bundle.v0.10.0.json  finding-bundle.v0.2.0.json  finding-bundle.v0.3.0.json  finding-bundle.v0.4.0.json  finding-bundle.v0.5.0.json  finding-bundle.v0.6.0.json  finding-bundle.v0.7.0.json  finding-bundle.v0.8.0.json
scripts/: bench-reviewer-batching.sh  clean-clone-smoke.sh  cross_impl_conformance.py  gold-from-frontier.py  hub-publish.sh  package-release-assets.sh  release-check.sh  serve-web.sh  voice-check.sh  weekly-diff.sh
site/: .dockerignore  .gitignore  Dockerfile  LAUNCH_ARTIFACTS.md  README.md  astro.config.mjs  fly.toml  nginx.conf  package-lock.json  package.json
site/public/: brand  try  vela_reducer.py
site/scripts/: build-fallback-snapshot.ts
site/src/: config.ts  content.config.ts
site/src/components/: Chip.astro  ClaimCard.astro  FigurePlate.astro  FrontierDirectory.astro  HeroConstellation.astro  HubBrowse.astro  ImagePlate.astro  (+14 more)
tests/: test-benchmark-regression.sh  test-http-server.sh  test-local-corpus-workflow.sh  test-mcp-server.sh
tests/conformance/: README.md  auto-apply-tier.json  confidence-scoring.json  directory-layout.json  id-generation.json  link-inference.json  note-provenance.json  observer-policies.json  proposal-idempotency.json  registry-publish-pull.json  replication-cascade.json  retraction-propagation.json
web/: index.html
web/previews/: _data.js  _nav.js  finding.html  frontier.html  index.html  live-finding.html  live-frontier.html  proof.html  proposals.html  terminal.html
web/scripts/: alidade.js  workbench.js
web/styles/: site.css  tokens.css  workbench.css
(+784 files in other folders)
