[workspace]
members = [
    "crates/vela-protocol",
    "crates/vela-scientist",
    "crates/vela-cli",
    "crates/vela-hub",
]
resolver = "3"

[workspace.package]
version = "0.32.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# Shared dependencies
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
hex = "0.4"
regex = "1"
urlencoding = "2"
colored = "3"
axum = "0.8"
async-stream = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "any"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
toml = "0.8"
quick-xml = "0.37"
tokio-stream = "0.1"
futures = "0.3"
tempfile = "3"

# v0.25 Datasets — Parquet metadata + sample-row reader. Vela-
# scientist only; substrate doesn't depend on it.
parquet = { version = "53", default-features = false, features = ["arrow"] }
arrow-array = { version = "53", default-features = false }
arrow-schema = { version = "53", default-features = false }

# Internal crates
vela-protocol = { path = "crates/vela-protocol" }
vela-scientist = { path = "crates/vela-scientist" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
