[package]
name = "vela-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vela hub: read-only HTTP server over a Postgres-backed registry of signed frontier manifests"

[[bin]]
name = "vela-hub"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
vela-protocol.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
