[package]
name = "vela-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vela hub: read-only HTTP server over a Postgres-backed registry of signed frontier manifests"

[[bin]]
name = "vela-hub"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
vela-protocol.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Used by the proof-packet download route to stream a tar.gz of the
# packet directory. Packets are small (a few MB) so we build the
# tarball in memory.
tar = "0.4"
flate2 = "1.0"
# v0.49.3: needed for the optional Ed25519 signing of the
# `/.well-known/vela` discovery manifest.
ed25519-dalek.workspace = true
chrono.workspace = true
hex = "0.4"

[lints]
workspace = true
