[package]
name = "vela-scientist"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The agent layer. Reads a researcher's working directory (papers,
# notes, code, datasets, notebooks), runs scoped scientific tasks
# under named agents (Literature Scout, Notes Compiler, Code Analyst,
# …), and emits StateProposals into a Vela frontier through the
# existing `vela-protocol` API.
#
# Doctrine — the substrate stays dumb:
#   * vela-protocol does not depend on this crate.
#   * This crate has model + prompt + extraction + heuristic logic.
#   * Output is always a StateProposal (or an array of them) tagged
#     with an AgentRun for reviewer-facing provenance.
#   * Humans review and merge in the Workbench. Agents propose;
#     they never sign canonical state.
#
# v0.22 ships Literature Scout only. Other agents land one at a time
# in v0.23+ (Notes Compiler, Code Analyst, Contradiction Finder,
# Experiment Planner, Reviewer Agent).

[dependencies]
vela-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = { workspace = true }
